# DSTA-RAG

./: AGENTS.md  README.md  pyproject.toml  requirements-stage1.txt  requirements-stage2.txt
artifacts/stage1/: sft.jsonl  traces.jsonl
artifacts/stage2/: train.jsonl
cmd/: build_stage1.sh  build_stage2.sh  eval.sh  eval_stage1.sh  prepare_hotpot_from_hf.sh  train_rl.sh  train_sft.sh
configs/stage1/: qwen25_3b_lora.yaml  qwen25_7b_lora.yaml
configs/stage2/: qwen25_3b_grpo.yaml
dsta_rag/: prompts.py  schema.py  utils.py
dsta_rag/data/: normalize.py  retrieval_cache.py
dsta_rag/protocol/: __init__.py  blackboard.py  parser.py  tags.py  validator.py
dsta_rag/stage1/: build_sft.py  build_traces.py  eval_sft.py  prepare_hotpot.py  train_sft.py
dsta_rag/stage2/: build_rl_dataset.py  launcher.py  replay_eval.py  reward_fn.py
examples/: raw_hotpot_like.jsonl  stage1_trace.jsonl
tests/: test_build_stage2_dataset.py  test_parser.py  test_reward.py  test_validator.py
verl/trainer/: main_ppo.py
verl/utils/reward_score/: qa_em.py
